--- a/Binary Search/binary_search.html
+++ b/Binary Search/binary_search.html
@@ -8,8 +8,35 @@
   </head>
   <body>
     <script>
+      /*
       let num = [2, 7, 8, 9, 10, 13, 15, 17, 19, 21];
+      
+      let num = [-1, 0, 3, 5, 9, 12];
+      function binarySearch(array, target) {
+        let left = 0;
+        let right = array.length - 1;
 
+        while (left < right) {
+          let mid = Math.floor((left + right) / 2);
+          if (target === array[mid]) {
+            return mid;
+          } else if (target < array[mid]) {
+            right = mid - 1;
+          } else {
+            left = mid + 1;
+          }
+        }
+        return false;
+      }
+      console.log(binarySearch(num, 7));
+      console.log(binarySearch(num, 15));
+      console.log(binarySearch(num, 4));
+      console.log(binarySearch(num, 2));
+      */
+      /*
+      let num = [2, 7, 8, 9, 10, 13, 15, 17, 19, 21];
+      */
+      let num = [-1, 0, 3, 5, 9, 12];
       function binarySearch(array, target) {
         let left = 0;
         let right = array.length - 1;
@@ -27,8 +54,7 @@
         return false;
       }
 
-      console.log(binarySearch(num, 7));
-      console.log(binarySearch(num, 15));
+      console.log(binarySearch(num, 9));
     </script>
   </body>
 </html>
