--- a/exercism.org/string.html
+++ b/exercism.org/string.html
@@ -17,14 +17,10 @@
         "Reveling in the freedom of lazy days.",
       ];
 
-      function frontDoorPassword(SUMMER) {
-        firstWord = SUMMER.slice(0);
-
-        return console.log(firstWord);
+      function frontDoorResponse(SUMMER) {
+        return console.log(SUMMER[0]);
       }
-      //sentence.toLowerCase();
-
-      frontDoorPassword();
+      frontDoorResponse();
     </script>
   </body>
 </html>
