--- a/exercism.org/string.html
+++ b/exercism.org/string.html
@@ -8,19 +8,17 @@
   </head>
   <body>
     <script>
-      const SUMMER = [
-        "Sunshine warming my toes,",
-        "Underwater fun with my friends.",
-        "Making homemade ice cream on the porch,",
-        "Many long nights catching fireflies.",
-        "Early morning walks to the creek,",
-        "Reveling in the freedom of lazy days.",
-      ];
+            let SUMMER = [Stands so high
+      Huge hooves too
+      Impatiently waits for
+      Reins and harness
+      Eager to leave];
+            console.log(SUMMER[0]);
+            function frontDoorResponse(SUMMER) {
+              return console.log(SUMMER[0]);
+            }
 
-      function frontDoorResponse(SUMMER) {
-        return console.log(SUMMER[0]);
-      }
-      frontDoorResponse();
+            frontDoorResponse();
     </script>
   </body>
 </html>
