--- a/Binary Search/binary_search.html
+++ b/Binary Search/binary_search.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>binary search</title>
+    <script src="./binarySearch.js"></script>
   </head>
   <body>
     <script>
@@ -36,6 +37,7 @@
       /*
       let num = [2, 7, 8, 9, 10, 13, 15, 17, 19, 21];
       */
+      /*
       let num = [-1, 0, 3, 5, 9, 12];
       function binarySearch(array, target) {
         let left = 0;
@@ -55,6 +57,7 @@
       }
 
       console.log(binarySearch(num, 9));
+      */
     </script>
   </body>
 </html>
